Audaspace: port bugfix from upstream.

Fixes T91615: Instant crash when dragging video file into video editor sequencer